--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
 	"name": "tera-proxy-game",
 	"version": "1.0.0",
 	"dependencies": {
-		"baldera-logger": "^0.1.0",
 		"binary-search": "^1.3.2",
+		"yauzl": "^2.10.0",
+		"log": "github:pinkipi/log",
 		"tera-crypto": "github:tera-proxy/tera-crypto",
 		"tera-data-parser": "github:tera-proxy/tera-data-parser"
 	},
-	"main": "lib/index.js",
 	"description": "Core TERA Proxy library. Handles mods, connections and network-triggered events.",
 	"license": "GPL-3.0",
 	"author": "Pinkie Pie"
